# cp3-dsp-rs

./: Cargo.toml  README.md  build.sh  cbindgen.toml  cp3_dsp.h
src/: consts.rs  delay.rs  drums.rs  engine.rs  envelopes.rs  filters.rs  karplus.rs  lib.rs  limiter.rs  osc.rs  oscillators.rs  plaits_voice.rs  plot.rs  reverb.rs  sequencer.rs  subtractive.rs  synth.rs  utils.rs
