[package]
name = "cp3_dsp"
version = "0.1.0"
edition = "2021"
authors = ["Corné Driesprong <corne@cp3.io>"]
description = "DSP library"

[dependencies]
crossbeam = "0.8.4"
lazy_static = "1.5.0"
mi-plaits-dsp = { git = "https://github.com/sourcebox/mi-plaits-dsp-rs.git", branch = "master" }
plotters = "0.3.6"
rand = "0.8.4"
rustfft = "=6.2.0"
rusty_link = "0.4.3"

[lib]
name = "cp3_dsp"
crate-type = ["rlib", "staticlib"]
