[package]
name = "cp3_dsp"
version = "0.1.0"
edition = "2021"
authors = ["Corné Driesprong <corne@cp3.io>"]
description = "DSP library"

[dependencies]
crossbeam = "0.8.4"
lazy_static = "1.5.0"
plotters = "0.3.6"
rand = "0.8.4"
rustfft = "=6.2.0"

[lib]
name = "cp3_dsp"
crate-type = ["rlib", "staticlib"]
